# mockllm

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  example.responses.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  responses.yml  test_responses.yml
.github/workflows/: ci.yml  publish.yml  tests.yml
src/mockllm/: __init__.py  __main__.py  _version.py  cli.py  config.py  models.py  server.py  utils.py
src/mockllm/providers/: anthropic.py  base.py  openai.py
tests/: conftest.py  test_config.py  test_responses.yml  test_server.py
