[tool.poetry]
name = "mockllm"
version = "0.1.0"
description = "A mock server that mimics OpenAI and Anthropic API formats for testing"
authors = ["Luke Hinds <luke@stacklok.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/stacklok/mockllm"
homepage = "https://github.com/stacklok/mockllm"
keywords = ["mock", "llm", "openai", "anthropic", "testing"]
packages = [
    { include = "mockllm", from = "src" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = ">=0.68.0"
uvicorn = ">=0.15.0"
pydantic = ">=2.0.0"
python-json-logger = ">=2.0.0"
pyyaml = ">=5.4.1"
watchdog = ">=2.1.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-asyncio = ">=0.15.0"
pytest-mock = ">=3.10.0"
black = ">=21.0"
isort = ">=5.0"
mypy = ">=0.900"
ruff = ">=0.1.0"
types-PyYAML = ">=6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
